Incluindo tipos de roles e novos filtros de segurança